# ai-qa-orchestrator

./: Dockerfile  README.md  ai_validation_demo.py  app.py  config.py  env.example  google_ui_test_demo.py  hackathon-sdlc.md  launch.py  llm_performance_section.txt  real_app_demo copy 2.py  real_app_demo copy.py  real_app_demo.py  requirements.txt  run.sh  run_demo.py  run_real_app.py  setup.py  temp_fix.py  test_setup.py
config/: app_config.yml
project-enigma-source/ProjectEnigmaBE-main/: .gitignore  Dockerfile  LICENSE  env.example  main.py  pyproject.toml
project-enigma-source/ProjectEnigmaBE-main/app/: __init__.py
project-enigma-source/ProjectEnigmaBE-main/app/api/: routes.py
project-enigma-source/ProjectEnigmaBE-main/app/api/endpoints/: chat.py  health.py  repositories.py
project-enigma-source/ProjectEnigmaBE-main/app/core/: __init__.py  alerts.py  config.py  exceptions.py  llm.py  logging.py  logging_utils.py
project-enigma-source/ProjectEnigmaBE-main/app/integrations/: README.md  __init__.py
project-enigma-source/ProjectEnigmaBE-main/app/integrations/base/: confluence_interface.py  github_interface.py  jira_interface.py
project-enigma-source/ProjectEnigmaBE-main/app/integrations/mock/: mock_github.py  mock_jira.py
project-enigma-source/ProjectEnigmaBE-main/app/integrations/real/: real_confluence.py  real_github.py  real_jira.py
project-enigma-source/ProjectEnigmaBE-main/app/models/: __init__.py  api.py
project-enigma-source/ProjectEnigmaBE-main/app/services/: repository_service.py
project-enigma-source/ProjectEnigmaBE-main/app/workflows/: __init__.py  initialization.py  orchestrator.py  qa_workflow.py  release_workflow.py  workflow_manager.py  workflow_registry.py
(+173 files in other folders)
